12/20/2003  version 0.1.48  Ian Lewis <IanLewis@member.fsf.org>

    * Merged some of Bilel's changes to AdapterNode making it better able to
      handle more XML node types.

12/19/2003  version 0.1.47  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a minor bug in the logic to update tab titles.
    * jsXe now asks you if you really want to overwrite existing files on disk.

12/18/2003  version 0.1.46  Ian Lewis <IanLewis@member.fsf.org>

    * Changed tabs to use icons instead of appending a '*' to the tab name to
      indicate a file is dirty.
    * Added javadoc to the AdapterNode class.
    * Changed the security mode for the getNode() and setParentNode() methods
      in AdapterNode from protected to default. All other classes should use
      the public interface.

12/16/2003  version 0.1.45  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in the attributes table where it wasn't updated properly.
      It now updates properly and sorts based on the order in which they will
      be serialized (alphabetical).
    * Updated many of the interfaces to make them more OO like. Before,
      DefaultView and TabbedView could be created but would have wierd default
      values and relied on the user to initialize them with a document. Now an
      initial document is required to construct them. This should be better for
      reuse.
    * Added a "Rename Node" action to the default view tree's context menu. You
      can still rename it by clicking twice (not double clicking) on the element
      node.

12/14/2003  version 0.1.44  Ian Lewis <IanLewis@member.fsf.org>

    * Updated the DOMSerializer and related classes to be compliant with the
      latest version of the DOM3. So now jsXe requires Xerces 2.6.0.
    * Fixed a bug where the html pane was editable after opening a new document
      though no node was selected.

11/19/2003  version 0.1.43  Ian Lewis <IanLewis@member.fsf.org>
